--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<link rel="stylesheet" href="assets/css/ng-style.css" />
 
+		<!-- styles -->
+		<link rel="stylesheet" href="assets/css/card-elmnt-style.css">
+		<link rel="stylesheet" href="assets/css/card-material-style.css">
+		<link rel="stylesheet" href="assets/css/box-style.css">
+
+		<!-- scripts -->
 		<script src="assets/libs/jquery-3.3.1.js"></script>
 		<script src="assets/libs/bootstrap.js"></script>
 
@@ -21,7 +27,7 @@
 	</head>
 	<body>
 
-		<nav class="navbar navbar-inverse">
+		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -29,29 +35,54 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">{{ appName }}</a>
+					<a class="navbar-brand" ui-sref="home">{{ appName }}</a>
 				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
-					<ul class="nav navbar-nav">
-						<li ng-if="isAuthenticated()" ui-sref-active="active"><a ui-sref="home">Home</a></li>
-						<li ng-if="isAuthenticated()" ui-sref-active="active"><a ui-sref="notice">Notice</a></li>
-					</ul>
+				<div class="collapse navbar-collapse" id="myNavbar" ng-if="!hideNavigation">
+					<!-- <ul class="nav navbar-nav" ng-if="isAuthenticated()">
+						<li ui-sref-active="active"><a ui-sref="home">Home</a></li>
+						<li ui-sref-active="active"><a ui-sref="notice">Notice</a></li>
+						<li ui-sref-active="active"><a ui-sref="subject">Subject</a></li>
+						<li ui-sref-active="active"><a ui-sref="materialType">Type</a></li>
+						<li ui-sref-active="active"><a ui-sref="material">Material</a></li>
+					</ul> -->
 					<ul class="nav navbar-nav navbar-right">
 						<li ng-if="!isAuthenticated()" ui-sref-active="active"><a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-						<li ng-if="isAuthenticated()"><a href="#" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+						<li ng-if="isAuthenticated()" class="dropdown">
+
+							<a href="" data-toggle="dropdown" class="dropdown-toggle">{{ user.username }} 
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="#" ng-click="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 
-		<div ui-view></div>
+		<ul ng-show="breadcrumbItems.length > 0" class="breadcrumb container" style="background-color: transparent;">
+			<li>
+				<a ui-sref="home"><span class="glyphicon glyphicon-home"></span></a>
+			</li>
+			<li ng-repeat="breadcrumbItem in breadcrumbItems" ng-class="{'active':$last}">
+				<a ui-sref="{{ breadcrumbItem.state }}" ng-if="!$last">{{ breadcrumbItem.label }}</a>
+				<span ng-if="$last">{{ breadcrumbItem.label }}</span>
+			</li>
+		</ul>
 
+		<div ui-view></div>
+		
+		<br/><br/><br/>
 	</body>
 
 	<!-- configuration -->
 	<script type="text/javascript" src="app/app.module.js"></script>
 	<!-- route -->
 	<script type="text/javascript" src="app/app.route.js"></script>
+
+	<!-- shared -->
+	<script type="text/javascript" src="app/shared/fileModel.js"></script>
 
 	<!-- top controller -->
 	<script type="text/javascript" src="app/shared/parentControllers.js"></script>
@@ -63,6 +94,15 @@
 	<!-- notice -->
 	<script type="text/javascript" src="app/components/notice/noticeServices.js"></script>
 	<script type="text/javascript" src="app/components/notice/noticeControllers.js"></script>
+	<!-- subject -->
+	<script type="text/javascript" src="app/components/subject/subjectServices.js"></script>
+	<script type="text/javascript" src="app/components/subject/subjectControllers.js"></script>
+	<!-- Material type (MIME types) -->
+	<script type="text/javascript" src="app/components/type/typeServices.js"></script>
+	<script type="text/javascript" src="app/components/type/typeControllers.js"></script>
+	<!-- Material -->
+	<script type="text/javascript" src="app/components/material/materialServices.js"></script>
+	<script type="text/javascript" src="app/components/material/materialControllers.js"></script>
 
 	<!-- formatter -->
 	<script type="text/javascript" src="app/shared/formatter.js"></script>
