Package Module completed

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/card-elmnt-style.css">
 		<link rel="stylesheet" href="assets/css/card-material-style.css">
 		<link rel="stylesheet" href="assets/css/box-style.css">
+		<link rel="stylesheet" href="assets/css/toogle-switch.css">
 
 		<!-- scripts -->
 		<script src="assets/libs/jquery-3.3.1.js"></script>
@@ -103,6 +104,9 @@
 	<!-- Material -->
 	<script type="text/javascript" src="app/components/material/materialServices.js"></script>
 	<script type="text/javascript" src="app/components/material/materialControllers.js"></script>
+	<!-- Package -->
+	<script type="text/javascript" src="app/components/package/packageServices.js"></script>
+	<script type="text/javascript" src="app/components/package/packageControllers.js"></script>
 
 	<!-- formatter -->
 	<script type="text/javascript" src="app/shared/formatter.js"></script>
